Added option to add multiple ingredients when creating a recipe

--- a/WebApplication2/Pages/RecipePages/Create.cshtml
+++ b/WebApplication2/Pages/RecipePages/Create.cshtml
@@ -50,12 +50,12 @@
                 <span asp-validation-for="Recipe.Instructions" class="text-danger"></span>
             </div>
             <h5>Ingredients:</h5>
-            <div id="temp" class="temp">
-                <form method="post" id="temp">
+            <div>
+                <form method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <table class="table">
-                        <thead>
-                        <tr>
+                        <thead id="temp">
+                        <tr class="items">
                             <th>
                                 <div class="form-group">
                                     <label asp-for="Ingredients[0].Name" class="control-label"></label>
@@ -65,9 +65,9 @@
                             </th>
                             <th>
                                 <div class="form-group">
-                                    <label asp-for="Count" class="control-label"></label>
-                                    <input asp-for="Count" class="form-control"/>
-                                    <span asp-validation-for="Count" class="text-danger"></span>
+                                    <label asp-for="Ingredients[0].Count" class="control-label"></label>
+                                    <input asp-for="Ingredients[0].Count" class="form-control"/>
+                                    <span asp-validation-for="Ingredients[0].Count" class="text-danger"></span>
                                 </div>
                             </th>
                             <th>
@@ -88,6 +88,7 @@
                     </div>
                 </form>
             </div>
+            
             <div class="form-group">
                 <input type="button" value="Add a field" class="add" id="add"/>
             </div>
@@ -99,27 +100,28 @@
 <div>
     <a asp-page="Index">Back to List</a>
 </div>
-<script type="text/javascript">
-        $(function () {
-            var nextId = Ingredients.Count();
-
-            $('#add').on('click', function () {
-                document.write(5+6);
-                var r = $('<label asp-for="Ingredients[nextId].Name" class="control-label"></label>>\r\n' +
-                    '<input asp-for="Ingredients[nextId].Name" class="form-control"/>');
-                $("#temp").append(r);
-
-                nextId++;
-            });
-        });
-function myFunction() {
-                    var nextId = Ingredients.Count();
-                    var r = $('<label asp-for="Ingredients[nextId].Name" class="control-label"></label>>\r\n' +
-                        '<input asp-for="Ingredients[nextId].Name" class="form-control"/>');
-                    $('#temp').append(r);
-    
-                    nextId++;
-    }
-</script>
 </body>
 </html>
+@section scripts {
+    <script type="text/javascript">
+        $(function () {
+            $('#add').on('click', function () {
+                var i = $(".items").length;
+                var r = $('<tr class="items"><th><div class="form-group">'+
+                '<label class="control-label" for="Ingredients_'+i+'__Name">Name</label>'+
+                           '<input class="form-control" type="text" id="Ingredients_'+i+'__Name" name="Ingredients['+i+'].Name" value>'+
+                            '<span class="text-danger field-validation-valid" data-valmsg-for="Ingredients['+i+'].Name" data-valmsg-replace="true"></span>'+
+                            '</div></th><th>' +
+                            '<div class="form-group">'+
+                                                       '<label class="control-label" for="Ingredients_'+i+'__Count">Count</label>'+
+                                                                 '<input class="form-control" type="number" data-val="true" data-val-required="The Count field is required." id="Ingredients_'+i+'__Count" name="Ingredients['+i+'].Count" value="'+i+'">'+
+                                                                ' <span class="text-danger field-validation-valid" data-valmsg-for="Ingredients['+i+'].Count" data-valmsg-replace="true"></span>'+
+                                                             '</div> </th><th><div class="form-group">'+
+                                                                 '<label class="control-label" for="Ingredients_'+i+'__Unit">Unit</label>'+
+                                                                 '<input class="form-control" type="text" id="Ingredients_'+i+'__Unit" name="Ingredients['+i+'].Unit" value="">'+
+                                                                 '<span class="text-danger field-validation-valid" data-valmsg-for="Ingredients['+i+'].Unit" data-valmsg-replace="true"></span> </div> </th> </tr>');
+                $("#temp").append(r);
+            });
+        });
+</script>
+}
