--- a/WebApplication2/Pages/RecipePages/SearchAccordingIngredient.cshtml
+++ b/WebApplication2/Pages/RecipePages/SearchAccordingIngredient.cshtml
@@ -36,7 +36,7 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => Model.Ingredient[0].Name)
+                    @Html.DisplayFor(modelItem => Model.Ingredient[i].Name)
                 </td>
                 <td>
                     <div class="form-group">
