Added lookup for ingredient if exists when creating recipe

--- a/WebApplication2/Pages/RecipePages/Create.cshtml
+++ b/WebApplication2/Pages/RecipePages/Create.cshtml
@@ -114,7 +114,7 @@
                             '</div></th><th>' +
                             '<div class="form-group">'+
                                                        '<label class="control-label" for="Ingredients_'+i+'__Count">Count</label>'+
-                                                                 '<input class="form-control" type="number" data-val="true" data-val-required="The Count field is required." id="Ingredients_'+i+'__Count" name="Ingredients['+i+'].Count" value="'+i+'">'+
+                                                                 '<input class="form-control" type="number" data-val="true" data-val-required="The Count field is required." id="Ingredients_'+i+'__Count" name="Ingredients['+i+'].Count" value="0">'+
                                                                 ' <span class="text-danger field-validation-valid" data-valmsg-for="Ingredients['+i+'].Count" data-valmsg-replace="true"></span>'+
                                                              '</div> </th><th><div class="form-group">'+
                                                                  '<label class="control-label" for="Ingredients_'+i+'__Unit">Unit</label>'+
