--- a/WebApplication2/Pages/RecipePages/Create.cshtml
+++ b/WebApplication2/Pages/RecipePages/Create.cshtml
@@ -84,13 +84,10 @@
                     </table>
 
                     <div class="form-group">
+                        <input type="button" value="Add a field" class="add btn btn-primary" id="add"/>
                         <input type="submit" value="Create" class="btn btn-primary"/>
                     </div>
                 </form>
-            </div>
-            
-            <div class="form-group">
-                <input type="button" value="Add a field" class="add" id="add"/>
             </div>
         </form>
     </div>
