Added message "Recipes with <selected ingredient>" to page

--- a/WebApplication2/Pages/RecipePages/SearchAccordingIngredient.cshtml
+++ b/WebApplication2/Pages/RecipePages/SearchAccordingIngredient.cshtml
@@ -43,6 +43,7 @@
         <input type="button" value="Add a field" class="add btn btn-primary" id="add"/> <input type="submit" value="Search" class="btn btn-primary"/>
     </span>
 </form>
+<p>@ViewData["Message"]</p>
 <table class="table">
     <thead>
     <tr>
@@ -60,9 +61,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
     }
