--- a/WebApplication2/Pages/RecipePages/Edit.cshtml
+++ b/WebApplication2/Pages/RecipePages/Edit.cshtml
@@ -10,40 +10,91 @@
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width"/>
     <title>Edit</title>
 </head>
 <body>
 
 <h4>Recipe</h4>
-<hr />
+<hr/>
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Recipe.Id" />
+            <input type="hidden" asp-for="Recipe.Id"/>
             <div class="form-group">
                 <label asp-for="Recipe.Name" class="control-label"></label>
-                <input asp-for="Recipe.Name" class="form-control" />
+                <input asp-for="Recipe.Name" class="form-control"/>
                 <span asp-validation-for="Recipe.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Recipe.CookingTime" class="control-label"></label>
-                <input asp-for="Recipe.CookingTime" class="form-control" />
+                <input asp-for="Recipe.CookingTime" class="form-control"/>
                 <span asp-validation-for="Recipe.CookingTime" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Recipe.Portions" class="control-label"></label>
-                <input asp-for="Recipe.Portions" class="form-control" />
+                <input asp-for="Recipe.Portions" class="form-control"/>
                 <span asp-validation-for="Recipe.Portions" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Recipe.Instructions" class="control-label"></label>
-                <input asp-for="Recipe.Instructions" class="form-control" />
+                <input asp-for="Recipe.Instructions" class="form-control"/>
                 <span asp-validation-for="Recipe.Instructions" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                Ingredients
+                <table class="table">
+                    <thead >
+                    <tr>
+                        <th>
+                            <div class="form-group">
+                                <label asp-for="Ingredients[0].Name" class="control-label"></label>
+                            </div>
+                        </th>
+                        <th>
+                            <div class="form-group">
+                                <label asp-for="Ingredients[0].Count" class="control-label"></label>
+                            </div>
+                        </th>
+                        <th>
+                            <div class="form-group">
+                                <label asp-for="Ingredients[0].Unit" class="control-label"></label>
+                            </div>
+                        </th>
+                    </tr>
+                    </thead>
+                    <tbody id="temp">
+                    @for (int i = 0; i < Model.Ingredients.Count; i++)
+                    {
+                        <tr class="items">
+                            <th>
+                                <div class="form-group">
+                                    <input hidden asp-for="Ingredients[i].Id" class="form-control" value="@Model.Ingredients[i].Id"/>
+                                    <input asp-for="Ingredients[i].Name" class="form-control"/>
+                                    <span asp-validation-for="Ingredients[0].Name" class="text-danger"></span>
+                                </div>
+                            </th>
+                            <th>
+                                <div class="form-group">
+                                    <input asp-for="Ingredients[i].Count" class="form-control"/>
+                                    <span asp-validation-for="Ingredients[0].Count" class="text-danger"></span>
+                                </div>
+                            </th>
+                            <th>
+                                <div class="form-group">
+                                    <input asp-for="Ingredients[i].Unit" class="form-control"/>
+                                    <span asp-validation-for="Ingredients[0].Unit" class="text-danger"></span>
+                                </div>
+                            </th>
+                        </tr>
+                    }
+                    </tbody>
+                </table>
+            </div>
+            <div class="form-group">
+                <input type="button" value="Add a field" class="add btn btn-primary" id="add"/>
+                <input type="submit" value="Save" class="btn btn-primary"/>
             </div>
         </form>
     </div>
@@ -55,3 +106,23 @@
 
 </body>
 </html>
+@section scripts {
+    <script type="text/javascript">
+        $(function () {
+            $('#add').on('click', function () {
+                var i = $(".items").length;
+                var r = $('<tr class="items"><th><div class="form-group">'+
+                           '<input class="form-control" type="text" id="Ingredients_'+i+'__Name" name="Ingredients['+i+'].Name" value>'+
+                            '<span class="text-danger field-validation-valid" data-valmsg-for="Ingredients['+i+'].Name" data-valmsg-replace="true"></span>'+
+                            '</div></th><th>' +
+                            '<div class="form-group">'+
+                                                                 '<input class="form-control" type="number" data-val="true" data-val-required="The Count field is required." id="Ingredients_'+i+'__Count" name="Ingredients['+i+'].Count" value="0">'+
+                                                                ' <span class="text-danger field-validation-valid" data-valmsg-for="Ingredients['+i+'].Count" data-valmsg-replace="true"></span>'+
+                                                             '</div> </th><th><div class="form-group">'+
+                                                                 '<input class="form-control" type="text" id="Ingredients_'+i+'__Unit" name="Ingredients['+i+'].Unit" value="">'+
+                                                                 '<span class="text-danger field-validation-valid" data-valmsg-for="Ingredients['+i+'].Unit" data-valmsg-replace="true"></span> </div> </th> </tr>');
+                $("#temp").append(r);
+            });
+        });
+</script>
+}
