--- a/WebApplication2/Pages/Index.cshtml
+++ b/WebApplication2/Pages/Index.cshtml
@@ -15,16 +15,17 @@
 <body>
 
 <form method="post">
-    <p>
-        Keyword: <input type="text" asp-for="SearchString"/>
-        <input type="submit" value="Search"/>
-    </p>
+    <h2>Search by</h2>
     <div class="form-group">
-        <select asp-for="Category" asp-items="Html.GetEnumSelectList<Category>()" class="form-control">
+        Keyword: <input type="text" asp-for="SearchString" class="form-control"/>
+       
+    </div>
+    <div class="form-group">
+        Category: <select asp-for="Category" asp-items="Html.GetEnumSelectList<Category>()" class="form-control">
             <option selected="selected" value="">Search according category</option>
         </select>
     </div>
-    <div class="form-group">Find recipes with specified ingredients: </div>
+    <div class="form-group">Ingredients: </div>
     <table class="table" id="js">
         <tr>
             <th>
@@ -50,7 +51,7 @@
 
     </table>
     <span class="form-group">
-        <input type="button" value="Add a field" class="add btn btn-primary" id="add"/>
+        <input type="button" value="Add ingredient" class="add btn btn-primary" id="add"/>
     </span>
     <br/>
     <br/>
