--- a/WebApplication2/Pages/Edit.cshtml
+++ b/WebApplication2/Pages/Edit.cshtml
@@ -98,7 +98,7 @@
                 </table>
             </div>
             <div class="form-group">
-                <input type="button" value="Add a field" class="add btn btn-primary" id="add"/>
+                <input type="button" value="Add ingredient" class="add btn btn-primary" id="add"/>
                 <input type="submit" value="Save" class="btn btn-primary"/>
             </div>
         </form>
