--- a/WebApplication2/Pages/Create.cshtml
+++ b/WebApplication2/Pages/Create.cshtml
@@ -21,6 +21,7 @@
 <form asp-page-handler="parseXml" method="post" enctype="multipart/form-data">
     <input type="file" asp-for="UploadFileName"/>
     <input type="submit"/>
+    <a asp-page="./Create" asp-page-handler="SaveSchema">Download Schema</a>
 </form>
 <p>@ViewData["Validation"]</p>
 <br/>
