Minor refactoring, fixed error after submitting ill formed recipe in xml format

--- a/RecipeBook/Pages/Create.cshtml
+++ b/RecipeBook/Pages/Create.cshtml
@@ -29,7 +29,7 @@
 <hr/>
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form asp-page-handler="FromFormular" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Recipe.Name" class="control-label"></label>
